tests/NormalTests/paczka1/small_fuzzy/85344481.err
Error in line 6: qPlABMR9KGu A766 13,1
Error in line 5: mz9J8 A766 24,3
Error in line 9: mz9J8 A104 30,7
